# python-module-cookiecutter

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  README.rst  cookiecutter.json  test.sh
hooks/: post_gen_project.py
{{cookiecutter.library_name}}/: .gitignore  README.rst  setup.cfg
{{cookiecutter.project_slug}}/: .bandit.yml  .cookiecutterrc  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pydocstlye.ini  .pylintrc  .travis.yml  .yapf  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.rst  requirements-dev.txt  setup.cfg  tox.ini  travis_pypi_setup.py
{{cookiecutter.project_slug}}/docs/: Makefile  README.rst
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/docs/source/reference/: api.rst
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  _{{cookiecutter.project_slug}}.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/data/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
